# shuttlings-2024

./: .gitignore  flake.nix  shuttle.nix  test.sh
ci/: lint.sh
shuttlings-cch24/: Cargo.toml
shuttlings-cch24/migrations/: 20241219223020_pagination.sql  20241219224834_pagination.sql  20241219231013_pagination.sql  20241219231850_pagination.sql  20241219232218_pages.sql
shuttlings-cch24/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
